boulder/tests/compile_fail/type/structures/init/missing_field.bo
# Missing field `b` in initializer of `A`
# (9:

struct A {
    b: u32,
}

fn test() -> A {
    A {
        
    }
}
